--- a/analisiskemajuan.html
+++ b/analisiskemajuan.html
@@ -67,7 +67,7 @@
 
   <!-- Kembali ke Beranda -->
   <div class="text-center">
-    <a href="dashboard.html" class="btn btn-secondary">⬅️ Kembali ke Beranda</a>
+    <a href="dashboard.html" class="btn btn-secondary">⬅️ Kembali</a>
   </div>
 </div>
 
