--- a/dashboard.html
+++ b/dashboard.html
@@ -53,11 +53,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Materi</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Latihan</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Video</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Diskusi</a></li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="materi.html">Materi</a></li>
+          <li class="nav-item"><a class="nav-link" href="soaladaptif.html">Latihan</a></li>
+          <li class="nav-item"><a class="nav-link" href="videointeraktif.html">Video</a></li>
+          <li class="nav-item"><a class="nav-link" href="forumdiskusi.html">Diskusi</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Profil</a></li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
   <header>
     <div class="container">
       <h1>Belajar Cerdas, Menyenangkan & Interaktif</h1>
-      <p class="lead text-white">Gabungan teknologi dan pendidikan dalam satu platform.</p>
+      <h2>HAK ASASI MANUSIA (HAM)</h2>
     </div>
   </header>
 
