--- a/materi.html
+++ b/materi.html
@@ -81,7 +81,7 @@
     </p>
 
     <div class="text-center mt-4">
-      <a href="dashboard.html" class="btn btn-purple btn-lg">⬅️ Kembali ke Dashboard</a>
+      <a href="dashboard.html" class="btn btn-purple btn-lg">⬅️ Kembali</a>
     </div>
   </div>
 
