--- a/soaladaptif.html
+++ b/soaladaptif.html
@@ -49,7 +49,7 @@
 
     <div id="feedback" class="mt-4 fw-bold text-center"></div>
     <div class="text-center mt-4">
-      <a href="index.html" class="btn btn-secondary px-4 py-2 rounded-pill shadow">⬅️ Kembali ke Beranda</a>
+      <a href="dashboard.html" class="btn btn-secondary px-4 py-2 rounded-pill shadow">⬅️ Kembali</a>
     </div>
   </div>
 
