--- a/videointeraktif.html
+++ b/videointeraktif.html
@@ -88,7 +88,7 @@
         <div id="result" class="mt-3 fw-bold"></div>
       </form>
       <div class="text-center mt-4">
-        <a href="dashboard.html" class="btn btn-secondary px-4 py-2 rounded-pill shadow">⬅️ Kembali ke Beranda</a>
+        <a href="dashboard.html" class="btn btn-secondary px-4 py-2 rounded-pill shadow">⬅️ Kembali</a>
       </div>
     </div>
   </div>
