--- a/aksesoffline.html
+++ b/aksesoffline.html
@@ -27,7 +27,7 @@
     <h1 class="text-danger">⚠️ Offline</h1>
     <p class="mt-3">Mohon maaf, halaman ini hanya bisa diakses secara <strong>online</strong>.</p>
     <p>Silakan sambungkan perangkat Anda ke internet dan muat ulang halaman ini.</p>
-      <a href="index.html" class="btn btn-secondary mt-4">⬅️ Kembali ke Beranda</a>
+      <a href="index.html" class="btn btn-secondary mt-4">⬅️ Kembali</a>
   </div>
 </body>
 </html>
