--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background-color: #ede7f6;
+      background-color: #f2f5f4;
       font-family: 'Segoe UI', sans-serif;
     }
     header {
