--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
           <li class="nav-item"><a class="nav-link" href="soaladaptif.html">Latihan</a></li>
           <li class="nav-item"><a class="nav-link" href="videointeraktif.html">Video</a></li>
           <li class="nav-item"><a class="nav-link" href="forumdiskusi.html">Diskusi</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Profil</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Profil</a></li>
         </ul>
       </div>
     </div>
