--- a/soaladaptif.html
+++ b/soaladaptif.html
@@ -178,5 +178,9 @@
       fb.style.color = color;
     }
   </script>
+  <script>
+    localStorage.setItem('soal adaptif', 'true');
+  </script>
+
 </body>
 </html>
