--- a/analisiskemajuan.html
+++ b/analisiskemajuan.html
@@ -2,104 +2,118 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <title>Kemajuan Belajar Siswa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Analisis Kemajuan - EduSmart</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f9fdfc;
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      padding: 20px;
       font-family: 'Segoe UI', sans-serif;
     }
-    .summary-card {
-      min-height: 100px;
-      text-align: center;
+
+    .card {
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border: none;
+    }
+
+    .progress {
+      height: 30px;
+      border-radius: 15px;
+      overflow: hidden;
+    }
+
+    .activity-status i {
+      margin-right: 8px;
+    }
+
+    .completed {
+      color: green;
+      font-weight: bold;
+    }
+
+    .not-completed {
+      color: red;
+      font-weight: bold;
+    }
+
+    .activity-list li {
+      margin-bottom: 12px;
+      font-size: 18px;
+    }
+
+    .title {
+      font-weight: 700;
+      font-size: 28px;
+      margin-bottom: 15px;
+      color: #004d40;
+    }
+
+    .percent-label {
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .btn-reset {
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-<div class="container py-5">
-  <h2 class="fw-bold text-center mb-5">📈 Analisis Kemajuan Belajar</h2>
 
-  <!-- Ringkasan Aktivitas -->
-  <div class="row text-center mb-4">
-    <div class="col-md-3">
-      <div class="card summary-card">
-        <div class="card-body">
-          <h6 class="card-title">Video Ditonton</h6>
-          <h4 id="videoCount">5</h4>
-        </div>
+  <div class="container">
+    <div class="card p-4">
+      <div class="title">📊 Kemajuan Belajar Siswa</div>
+
+      <ul class="activity-list list-unstyled">
+        <li id="status-materi" class="activity-status"><i class="fa-solid fa-book"></i> Materi</li>
+        <li id="status-video interaktif" class="activity-status"><i class="fa-solid fa-video"></i> Video Interaktif</li>
+        <li id="status-soal adaptif" class="activity-status"><i class="fa-solid fa-file-lines"></i> Soal Adaftif</li>
+        <li id="status-gamifikasi" class="activity-status"><i class="fa-solid fa-gamepad"></i> Gamifikasi</li>
+        <li id="status-forum Diskusi" class="activity-status"><i class="fa-solid fa-circle-question"></i> Forum Diskusi</li>
+      </ul>
+
+      <div class="percent-label mb-2">Total Progres:</div>
+      <div class="progress mb-3">
+        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 0%;" id="progressBar">0%</div>
       </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card summary-card">
-        <div class="card-body">
-          <h6 class="card-title">Soal Dijawab</h6>
-          <h4 id="quizCount">12</h4>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card summary-card">
-        <div class="card-body">
-          <h6 class="card-title">Diskusi Diikuti</h6>
-          <h4 id="forumCount">4</h4>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card summary-card">
-        <div class="card-body">
-          <h6 class="card-title">Skor Rata-rata</h6>
-          <h4 id="avgScore">85%</h4>
-        </div>
-      </div>
+
+      <button class="btn btn-outline-danger btn-reset" onclick="resetProgress()">
+        <i class="fa-solid fa-rotate-left"></i> Reset Progress
+      </button>
+      <a href="dashboard.html" class="btn btn-outline-primary btn-back">
+        <i class="fa-solid fa-arrow-left"></i> Kembali
+      </a>
     </div>
   </div>
 
-  <!-- Grafik Perkembangan Poin -->
-  <div class="card mb-5">
-    <div class="card-body">
-      <h5 class="card-title">Grafik Poin Mingguan</h5>
-      <canvas id="pointChart"></canvas>
-    </div>
-  </div>
+  <script>
+    const activities = ['materi', 'video interaktif', 'soal adaptif', 'gamifikasi', 'forum Diskusi'];
+    let completed = 0;
 
-  <!-- Kembali ke Beranda -->
-  <div class="text-center">
-    <a href="dashboard.html" class="btn btn-secondary">⬅️ Kembali</a>
-  </div>
-</div>
-
-<script>
-  const ctx = document.getElementById('pointChart').getContext('2d');
-  const pointChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: ['Senin', 'Selasa', 'Rabu', 'Kamis', 'Jumat'],
-      datasets: [{
-        label: 'Poin',
-        data: [10, 20, 30, 50, 70],
-        borderColor: 'rgb(75, 192, 192)',
-        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-        tension: 0.3,
-        fill: true
-      }]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: {
-          display: false
-        }
-      },
-      scales: {
-        y: {
-          beginAtZero: true
-        }
+    activities.forEach((item) => {
+      const isDone = localStorage.getItem(item) === 'true';
+      const statusEl = document.getElementById(`status-${item}`);
+      if (isDone) {
+        statusEl.innerHTML += ' <span class="completed"><i class="fa-solid fa-check-circle"></i> Selesai</span>';
+        completed++;
+      } else {
+        statusEl.innerHTML += ' <span class="not-completed"><i class="fa-solid fa-xmark-circle"></i> Belum</span>';
       }
+    });
+
+    const percent = Math.round((completed / activities.length) * 100);
+    const progressBar = document.getElementById('progressBar');
+    progressBar.style.width = percent + '%';
+    progressBar.textContent = percent + '%';
+
+    function resetProgress() {
+      activities.forEach((item) => localStorage.removeItem(item));
+      location.reload();
     }
-  });
-</script>
+  </script>
+
 </body>
 </html>
