--- a/materi.html
+++ b/materi.html
@@ -89,6 +89,9 @@
   <footer>
     <p>&copy; 2025 EduSmart | Halaman Materi HAM</p>
   </footer>
+<script>
+  localStorage.setItem('materi', 'true');
+</script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
